codex-rs/astral-tui-scrollback/src/snapshots/astral_tui_scrollback__render__tests__background_command_lifecycle_snapshot.snap
---
source: astral-tui-scrollback/src/render_tests.rs
expression: rendered
---
◇ Run just test -p codex-cli
  cwd /workspace
  process process-7
  stdin continue\n
  │ Compiling astral-tui
