codex-rs/astral-tui-scrollback/src/snapshots/astral_tui_scrollback__render__tests__background_task_action_tool_surfaces_snapshot.snap
---
source: astral-tui-scrollback/src/render_tests.rs
expression: rendered
---
◆ Poll task-7  12ms
  │ tests passed
◆ Input task-7  2ms
  │ input sent
◆ List background tasks  1ms
  │ task-7 running
× Stop task-7  2ms
  │ task already exited
