codex-rs/astral-tui-scrollback/src/snapshots/astral_tui_scrollback__render__tests__codex_surface_tool_blocks_snapshot.snap
---
source: astral-tui-scrollback/src/render_tests.rs
expression: rendered
---
◆ Run just test -p astral-tui  2.4s
  cwd /workspace
  exit 0
  │ PASS timeline reducer
  │ PASS presentation
  │ PASS renderer
  │ PASS app shell
◆ Edit 4 files

  M astral-tui/src/render.rs  +2/-1
    1  old
    1  new
    2  another

  A astral-tui/src/new.rs  +1/-0
    1  new module

  D astral-tui/src/obsolete.rs  +0/-1
    1  old module

  R astral-tui/src/old_name.rs → astral-tui/src/new_name.rs
◆ Search Ratatui inline viewport
