codex-rs/astral-tui-scrollback/src/snapshots/astral_tui_scrollback__render__tests__edit_display_modes_snapshot.snap
---
source: astral-tui-scrollback/src/render_tests.rs
expression: rendered
---
COLLAPSED
◆ Edit 4 files +3/-2

TRUNCATED
◆ Edit 4 files
  M astral-tui/src/render.rs  +2/-1
  │ @@ -1 +1,2 @@
  │ -old
  └ 7 more lines

EXPANDED
◆ Edit 4 files
  M astral-tui/src/render.rs  +2/-1
  │ @@ -1 +1,2 @@
  │ -old
  │ +new
  │ +another
  A astral-tui/src/new.rs  +1/-0
  │ +new module
  D astral-tui/src/obsolete.rs  +0/-1
  │ -old module
  R astral-tui/src/old_name.rs → astral-tui/src/new_name.rs  +0/-0
