codex-rs/astral-tui-scrollback/src/snapshots/astral_tui_scrollback__render__tests__long_user_prompt_fold_cycle_snapshot.snap
---
source: astral-tui-scrollback/src/render_tests.rs
expression: "format!(\"COLLAPSED\\n{collapsed}\\n\\nEXPANDED\\n{expanded}\")"
---
COLLAPSED
› first line
  second line
  third line …
  ↳ src/main.rs

EXPANDED
› first line
  second line
  third line
  fourth line
  ↳ src/main.rs
