codex-rs/astral-tui-scrollback/src/snapshots/astral_tui_scrollback__render__tests__proposed_plan_uses_the_markdown_renderer_snapshot.snap
---
source: astral-tui-scrollback/src/render_tests.rs
expression: "render(item, block.default_display_mode())"
---
• Proposed Plan
  Renderer plan

  1. Preserve event order
  2. Render ThreadItem::Plan separately

  ┌─────────┬───────┐
  │ Stage   │ State │
  ├─────────┼───────┤
  │ reducer │ done  │
  └─────────┴───────┘
