codex-rs/astral-tui-scrollback/src/snapshots/astral_tui_scrollback__render__tests__raw_reasoning_is_used_when_summary_is_absent_snapshot.snap
---
source: astral-tui-scrollback/src/render_tests.rs
expression: "render(item, DisplayMode::Expanded)"
---
◆ Thinking
  Inspect the renderer before changing its state.
